# work-journal

./: .gitignore  GETTING_STARTED.md  Makefile  README.md  default_providers.json  main.py  migrate_data.py  mkdocs.yml  pyproject.toml  test_local_llms.py
.github/workflows/: docs.yml
docs/: configurations.md  getting-started.md  index.md  providers.md
site/: 404.html  index.html  sitemap.xml
site/configurations/: index.html
site/getting-started/: index.html
site/providers/: index.html
site/search/: search_index.json
src/work_journal/: __init__.py  cli.py  date_parser.py  entity_registry.py  entry_processor.py  llm.py  logging_config.py  models.py  storage.py  tui.py
